--- a/config.default.json
+++ b/config.default.json
@@ -4,19 +4,21 @@
     "entropy_bonus": 1e-5,
 
     "num_epochs": 200000,
-    "time_limit": 360,
+    "time_limit": 600,
     "num_episodes_per_epoch": 10,
-    "num_nodes_per_epoch": 2000,
+    "num_nodes_per_epoch": 4000,
     "sample_rate": 0.5,
 
     "batch_size": 32,
-    "num_agents": 20,
+    "num_agents": 25,
     "episodes_preemption": 1,
 
-    "num_valid_instances": 50,
+    "num_valid_instances": 100,
     "num_valid_seeds": 5,
-    "validate_every": 100,
-    "heuristics_during_training" : false,
+    "validate_every": 50,
+    "heuristics_during_training" : true,
+    "heuristics_during_validation_on" : true,
+    "heuristics_during_validation_off" : false,
     "gpu": 0,
     "seed": 0
 }
