--- a/config.default.json
+++ b/config.default.json
@@ -4,20 +4,20 @@
     "entropy_bonus": 1e-5,
 
     "num_epochs": 200000,
-    "time_limit": 40000,
-    "num_episodes_per_epoch": 20,
+    "time_limit": 8.0,
+    "num_episodes_per_epoch": 10,
     "num_nodes_per_epoch": 1000,
-    "sample_rate": 0.5,
+    "sample_rate": 0.25,
 
     "batch_size": 32,
-    "num_agents": 25,
+    "num_agents": 20,
     "episodes_preemption": 1,
 
     "num_valid_instances": 50,
     "num_valid_seeds": 5,
-    "validate_every": 50,
-    "heuristics_during_training" : true,
-    "heuristics_during_validation_on" : true,
+    "validate_every": 40,
+    "heuristics_during_training" : false,
+    "heuristics_during_validation_on" : false,
     "heuristics_during_validation_off" : true,
     "gpu": 0,
     "seed": 0
