--- a/config.default.json
+++ b/config.default.json
@@ -3,8 +3,8 @@
 
     "entropy_bonus": 1e-5,
 
-    "num_epochs": 200000,
-    "time_limit": 10.0,
+    "num_epochs": 20000000,
+    "time_limit": 1.0,
     "num_episodes_per_epoch": 10,
     "num_nodes_per_epoch": 1000,
     "sample_rate": 0.25,
@@ -13,7 +13,7 @@
     "num_agents": 20,
     "episodes_preemption": 1,
 
-    "num_valid_instances": 100,
+    "num_valid_instances": 200,
     "num_valid_seeds": 5,
     "validate_every": 50,
     "heuristics_during_training" : false,
